[package]
name = "sorcery-codegen"
version = "0.1.0"
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
thiserror = "^1.0"
heck = "^0.3"
darling = "^0.10"