[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery-dom"
version = "0.1.0"

[dependencies]
crossbeam-channel = "^0.5"
dyn-clone = "^1.0"
generational-arena = "0.2.8"
sorcery = {path = "../sorcery"}
sorcery-reconciler = {path = "../sorcery-reconciler"}
thiserror = "^1.0"
tracing = "0.1"
wasm-bindgen = "0.2.68"
web-sys = {version = "0.3.4", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
]}

[dev-dependencies]
test-env-log = {version = "^0.2", features = ["trace"], default-features = false}
tracing-subscriber = {version = "0.1.6", features = ["chrono", "env-filter", "fmt"]}
