[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery-dom"
version = "0.1.0"

[dependencies]
crossbeam-channel = "^0.5"
dyn-clone = "^1.0"
generational-arena = "0.2.8"
gloo = "0.2.1"
sorcery = {path = "../sorcery"}
thiserror = "^1.0"
tracing = "0.1"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
web-sys = {version = "0.3.4", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
  'MouseEvent',
]}

[dev-dependencies]
test-env-log = {version = "^0.2", features = ["trace"], default-features = false}
tracing-subscriber = {version = "0.1.6", features = ["chrono", "env-filter", "fmt"]}
