[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery-macros"
version = "0.1.0"

[features]
default = ["rsx"]
rsx = []

[lib]
proc-macro = true

[dependencies]
darling = "^0.10"
heck = "^0.3"
proc-macro2 = '^1.0'
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
thiserror = "^1.0"
