[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery-reconciler"
version = "0.1.0"

[dependencies]
crossbeam-channel = "^0.5"
derivative = "^2.0"
dyn-clone = "^1.0"
generational-arena = "0.2.8"
sorcery = {path = "../sorcery"}
thiserror = "^1.0"
tokio = {version = "^0.3", default-features = false, features = ["sync"]}
tracing = "0.1"

[dev-dependencies]
test-env-log = {version = "^0.2", features = ["trace"], default-features = false}
tracing-subscriber = {version = "0.1.6", features = ["chrono", "env-filter", "fmt"]}
