[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery"
version = "0.1.0"

[features]
default = ["rsx"]

rsx = ["sorcery-rsx"]

[dependencies]
dyn-clone = "^1.0"
sorcery-codegen = {path = "../sorcery-codegen"}
sorcery-rsx = {optional = true, path = "../sorcery-rsx"}
thiserror = "^1.0"
tracing = "0.1"

[dev-dependencies]
test-env-log = {version = "^0.2", features = ["trace"], default-features = false}
tracing-subscriber = {version = "0.1.6", features = ["chrono", "env-filter", "fmt"]}
