[package]
authors = ["conner bryan <conner@amps.io>"]
description = "ui components"
edition = "2018"
license = "MIT"
name = "sorcery"
version = "0.1.0"

[features]
default = ["rsx"]
rsx = ["sorcery-macros/rsx"]

[dependencies]
async-trait = '^0.1'
bumpalo = {version = "3.4.0", features = ["collections"]}
crossbeam-channel = "^0.5"
derivative = "^2.0"
dyn-clone = "^1.0"
generational-arena = "0.2.8"
sorcery-macros = {path = "../sorcery-macros"}
thiserror = "^1.0"
tokio = {version = "^0.3", default-features = false, features = ["sync", "macros"]}
tracing = "0.1"
uuid = {version = "0.8", features = ["wasm-bindgen", "v4"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = {version = "^0.3"}
wasm-bindgen = "^0.2"

[dev-dependencies]
test-env-log = {version = "^0.2", features = ["trace"], default-features = false}
tracing-subscriber = {version = "0.1.6", features = ["chrono", "env-filter", "fmt"]}
